--- a/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.ini
+++ b/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.ini
@@ -80,9 +80,10 @@ COM_XIVEIRM_OPTIONCATEGORIES_NAME = "Name"
 COM_XIVEIRM_OPTIONCATEGORIES_STATE = "State"
 COM_XIVEIRM_TITLE_TABAPPS = "TabApps"
 COM_XIVEIRM_TABAPPS_ID = "ID"
-COM_XIVEIRM_TABAPPS_CLIENT_ID = "Client ID"
-COM_XIVEIRM_TABAPPS_APP_KEY = "App Key"
-COM_XIVEIRM_TABAPPS_TAB_KEY = "Tab Key"
+COM_XIVEIRM_TABAPPS_USERGROUP = "Usergroup"
+COM_XIVEIRM_TABAPPS_PLUGIN = "Plugin"
+COM_XIVEIRM_TABAPPS_ACCESS_LEVEL = "Access Level"
+COM_XIVEIRM_TABAPPS_CATID = "Category"
 COM_XIVEIRM_TABAPPS_CONFIG = "Config (JSON)"
 COM_XIVEIRM_TABAPPS_STATE = "State"
 COM_XIVEIRM_TABAPPS_ORDERING = "Ordering"
@@ -194,14 +195,14 @@ COM_XIVEIRM_TITLE_TABAPP = "TabApp"
 COM_XIVEIRM_LEGEND_TABAPP = "TabApp"
 COM_XIVEIRM_FORM_LBL_TABAPP_ID = "ID"
 COM_XIVEIRM_FORM_DESC_TABAPP_ID = "ID Desc"
-COM_XIVEIRM_FORM_LBL_TABAPP_CLIENT_ID = "Client ID"
-COM_XIVEIRM_FORM_DESC_TABAPP_CLIENT_ID = "Client ID Desc"
-COM_XIVEIRM_FORM_LBL_TABAPP_APP_KEY = "App Key"
-COM_XIVEIRM_FORM_DESC_TABAPP_APP_KEY = "Core Application Key, like: -contacts- for the main app. -transcord- for the medical transport coordination"
-COM_XIVEIRM_FORM_LBL_TABAPP_TAB_KEY = "Tab Key"
-COM_XIVEIRM_FORM_DESC_TABAPP_TAB_KEY = "Tab Key Desc"
+COM_XIVEIRM_FORM_LBL_TABAPP_USERGROUP = "Usergroup"
+COM_XIVEIRM_FORM_DESC_TABAPP_USERGROUP = "Select the usergroup this config is for. Note: The usergroup id could also be the client_id, which means that you have to select the upper group to take effect to all your employees. This is mainly used if the system run as a cloud service and every client have its own usergroup. To determine access, use the access levels (also known as view levels) below."
+COM_XIVEIRM_FORM_LBL_TABAPP_ACCESS_LEVEL = "Access Level"
+COM_XIVEIRM_FORM_DESC_TABAPP_ACCESS_LEVEL = "Access levels or view levels are used to take control over the views. If you want that a certain usergroup do not have access to this tab or widget, you may select a deeper level. Access or vie levels also known as departments - so you ensure that only CEOs have access to the business intelligence TabApp or only the administration and deeper have access to billing informations."
+COM_XIVEIRM_FORM_LBL_TABAPP_PLUGIN = "Plugin"
+COM_XIVEIRM_FORM_DESC_TABAPP_PLUGIN = "Select either a TabApp or a Widget for the relationship with the below category"
 COM_XIVEIRM_FORM_LBL_TABAPP_CATID = "Category"
-COM_XIVEIRM_FORM_DESC_TABAPP_CATID = "Select the category to assing a tabapp to. Standard is Root (0) = All"
+COM_XIVEIRM_FORM_DESC_TABAPP_CATID = "Select the category to assing a TabApp to. If we are in the client ability mode select Global (All) means all clients have access to it (like the core widget). You could use your own Categories, if you want more detailed categories (such as: customers are patients, companies, enterprise companies, small or middle sized companies, gold customers, etc...). If you have nested categories: select a parent category ensure that all child categories also have access to the tab or widget."
 COM_XIVEIRM_FORM_LBL_TABAPP_CONFIG = "Config"
 COM_XIVEIRM_FORM_DESC_TABAPP_CONFIG = "Config stored in json format. At this time i do not know what we save here later :) (may view and accesslvl to prevent user to see apps build for CEOs or CFOs)"
 COM_XIVEIRM_FORM_LBL_TABAPP_STATE = "State"
