renamed for tabapps config -> tab_key = plugin, app_key = access

--- a/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.ini
+++ b/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.ini
@@ -186,7 +186,7 @@ COM_XIVEIRM_LEGEND_OPTIONCATEGORY = "Option Category"
 COM_XIVEIRM_FORM_LBL_OPTIONCATEGORY_ID = "ID"
 COM_XIVEIRM_FORM_DESC_OPTIONCATEGORY_ID = "ID Desc"
 COM_XIVEIRM_FORM_LBL_OPTIONCATEGORY_APPCAT_KEY = "AppCat Key"
-COM_XIVEIRM_FORM_DESC_OPTIONCATEGORY_APPCAT_KEY = "Used to call the category with all options related to it. Example: contacts.gender or contacts.titles (100 digits for the tab_key, 1 digit for explode identifier (.) and 100 digits for the selectlist or radio option id = total amount 201) Note: Edit this section at your own risk!"
+COM_XIVEIRM_FORM_DESC_OPTIONCATEGORY_APPCAT_KEY = "Used to call the category with all options related to it. Example: contacts.gender or contacts.titles (100 digits for the tab_key (db plugin element name), 1 digit for explode identifier (.) and 100 digits for the selectlist or radio option id = total amount 201) Note: Edit this section at your own risk!"
 COM_XIVEIRM_FORM_LBL_OPTIONCATEGORY_NAME = "Name"
 COM_XIVEIRM_FORM_DESC_OPTIONCATEGORY_NAME = "Should be strings if we want to translate in other languages. Note: This lists are given and registerede by the system. Edit this section at your own risk!"
 COM_XIVEIRM_FORM_LBL_OPTIONCATEGORY_STATE = "State"
