--- a/source/package/plugins/plg_irmwidgetscontact_corewidget/language/en-GB/en-GB.plg_irmwidgetscontact_corewidget.sys.ini
+++ b/source/package/plugins/plg_irmwidgetscontact_corewidget/language/en-GB/en-GB.plg_irmwidgetscontact_corewidget.sys.ini
@@ -4,7 +4,5 @@
 ; @assetsLicense	devXive Proprietary Use License (http://www.devxive.com/license)
 ; @note		All ini files need to be saved as UTF-8 - No BOM
 
-PLG_IRMCUSTOMERWIDGETS_COREWIDGET = "IRMCustomerWidget - Core widget"
-PLG_IRMCUSTOMERWIDGETS_COREWIDGET_XML_DESCRIPTION = "Widget Plugin for the IRM Customer App which extends the base data view on the right with small helpers and/or statistics and other informations"
-
-PLG_IRMCUSTOMERWIDGETS_COREWIDGET_CONTAINERNAME = "Core Widget"
+PLG_IRMWIDGETSCONTACT_COREWIDGET = "IRMWidgetsContact - Core widget"
+PLG_IRMWIDGETSCONTACT_COREWIDGET_XML_DESCRIPTION = "Widget Plugin for the IRM Contact App which extends the base data view on the right with small helpers and/or statistics and other informations"
