--- a/source/package/plugins/plg_irmtabscontact_medicaldetails/language/en-GB/en-GB.plg_irmtabscontact_medicaldetails.sys.ini
+++ b/source/package/plugins/plg_irmtabscontact_medicaldetails/language/en-GB/en-GB.plg_irmtabscontact_medicaldetails.sys.ini
@@ -4,7 +4,5 @@
 ; @assetsLicense	devXive Proprietary Use License (http://www.devxive.com/license)
 ; @note		All ini files need to be saved as UTF-8 - No BOM
 
-PLG_IRMCUSTOMERTABS_MEDICALDETAILS = "IRMCustomerTab - Medical details"
-PLG_IRMCUSTOMERTABS_MEDICALDETAILS_XML_DESCRIPTION = "Tab Plugin for the IRM Customer App which extends the master data with medically relevant fields"
-
-PLG_IRMCUSTOMERTABS_MEDICALDETAILS_TABNAME = "Medical Details"
+PLG_IRMTABSCONTACT_MEDICALDETAILS = "IRMTabsContact - Medical details"
+PLG_IRMTABSCONTACT_MEDICALDETAILS_XML_DESCRIPTION = "Tab Plugin for the IRM Contact App which extends the master data with medically relevant fields"
