rename client_id strings to usergroup, code cleaning

--- a/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.ini
+++ b/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.ini
@@ -65,7 +65,7 @@ COM_XIVEIRM_CONTACTS_WEB = "Web"
 COM_XIVEIRM_CONTACTS_REMARKS = "Internal Remarks"
 COM_XIVEIRM_TITLE_OPTIONS = "Options"
 COM_XIVEIRM_OPTIONS_ID = "ID"
-COM_XIVEIRM_OPTIONS_CLIENT_ID = "Client ID"
+COM_XIVEIRM_OPTIONS_USERGROUP = "Usergroup"
 COM_XIVEIRM_OPTIONS_CATEGORY = "Category"
 COM_XIVEIRM_OPTIONS_OPT_KEY = "Option Key"
 COM_XIVEIRM_OPTIONS_OPT_VALUE = "Option Value"
@@ -167,8 +167,8 @@ COM_XIVEIRM_TITLE_OPTION = "Option"
 COM_XIVEIRM_LEGEND_OPTION = "Option"
 COM_XIVEIRM_FORM_LBL_OPTION_ID = "ID"
 COM_XIVEIRM_FORM_DESC_OPTION_ID = "ID Desc"
-COM_XIVEIRM_FORM_LBL_OPTION_CLIENT_ID = "Client ID"
-COM_XIVEIRM_FORM_DESC_OPTION_CLIENT_ID = "Client ID Desc"
+COM_XIVEIRM_FORM_LBL_OPTION_USERGROUP = "Usergroup"
+COM_XIVEIRM_FORM_DESC_OPTION_USERGROUP = "Select the usergroup for which this option is. Note: If you want that an option is for all users (client ability mode) you have to select the global group as set in the XiveIRM options."
 COM_XIVEIRM_FORM_LBL_OPTION_CATEGORY = "Category"
 COM_XIVEIRM_FORM_DESC_OPTION_CATEGORY = "Select the category (example: customer type or gender)"
 COM_XIVEIRM_FORM_LBL_OPTION_OPT_KEY = "Option Key"
