added list translations (options) gender

--- a/source/package/components/com_xiveirm/site/language/en-GB.com_xiveirm.ini
+++ b/source/package/components/com_xiveirm/site/language/en-GB.com_xiveirm.ini
@@ -29,7 +29,7 @@ COM_XIVEIRM_SELECT = "- Please Select -"
 COM_XIVEIRM_PREVENT_LEAVE_SITE = "Note: All your changes will be lost to this customer. Are you sure you want to leave this page?"
 COM_XIVEIRM_PREVENT_FORM_SUBMISSION = "Another form on this page has been changed. Are you sure you want to continue with this form submission?"
 
-; IRMMasterdataGlobalForm ----------------------------------------
+; IRMContactGlobalForm ----------------------------------------
 COM_XIVEIRM_CONTACT_FORM_ADD_NEW_CONTACT = "Add a new contact"
 COM_XIVEIRM_CONTACT_FORM_ = ""
 COM_XIVEIRM_CONTACT_FORM_ = ""
@@ -89,3 +89,10 @@ COM_XIVEIRM_CONTACT_FORM_EMAIL = "eMail-Address"
 COM_XIVEIRM_CONTACT_FORM_WEB = "Link to a social profile or a website"
 COM_XIVEIRM_CONTACT_FORM_INTERNAL_REMARKS = "Internal remarks"
 COM_XIVEIRM_CONTACT_FORM_INTERNAL_REMARKS_DESC = "Type in your text here"
+
+
+; SelectLists ----------------------------------------
+COM_XIVEIRM_CONTACT_GENDER_UNKNOWN = "Unknown"
+COM_XIVEIRM_CONTACT_GENDER_FEMALE = "Female"
+COM_XIVEIRM_CONTACT_GENDER_MALE = "Male"
+COM_XIVEIRM_CONTACT_GENDER_COMPANY = "Company"
