--- a/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.sys.ini
+++ b/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.sys.ini
@@ -16,7 +16,7 @@ COM_XIVEIRM_TITLE_ITEM_VIEW_CONTACT_DESC = "Show a specific Contact"
 COM_XIVEIRM_TITLE_FORM_VIEW_CONTACT = "ContactForm"
 COM_XIVEIRM_TITLE_FORM_VIEW_CONTACT_DESC = "Show a form to add or edit a Contact"
 COM_XIVEIRM_TITLE_OPTIONS = "Options"
-COM_XIVEIRM_TITLE_OPTIONCATEGORIES = "Option Categories"
+COM_XIVEIRM_OPTIONS_CATID = "Options - Category"
 COM_XIVEIRM_TITLE_TABAPPS = "TabApps"
 COM_XIVEIRM_TITLE_LIST_VIEW_APIS = "Apis"
 COM_XIVEIRM_TITLE_LIST_VIEW_APIS_DESC = "Show a list of Apis"
