--- a/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.ini
+++ b/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.ini
@@ -39,9 +39,9 @@ COM_XIVEIRM_CONTACTS_CREATED = "Created"
 COM_XIVEIRM_CONTACTS_CREATED_BY = "Created by"
 COM_XIVEIRM_CONTACTS_CHECKED_OUT = "Checked out by"
 COM_XIVEIRM_CONTACTS_CHECKED_OUT_TIME = "Checked out at"
-COM_XIVEIRM_CONTACTS_MODIFIED = "Last modified"
-COM_XIVEIRM_CONTACTS_CATID = "Category"
-COM_XIVEIRM_CONTACTS_CATID_FILTER = "- Select Category -"
+COM_XIVEIRM_CONTACTS_MODIFIED = "Modified"
+COM_XIVEIRM_CONTACTS_CATEGORY = "Category"
+COM_XIVEIRM_CONTACTS_CATEGORY_FILTER = "- Select Category -"
 COM_XIVEIRM_CONTACTS_CUSTOMER_ID = "Customer ID"
 COM_XIVEIRM_CONTACTS_COMPANY = "Company"
 COM_XIVEIRM_CONTACTS_TITLE = "Title"
@@ -50,7 +50,7 @@ COM_XIVEIRM_CONTACTS_FIRST_NAME = "First Name"
 COM_XIVEIRM_CONTACTS_GENDER = "Gender"
 COM_XIVEIRM_CONTACTS_DOB = "Date of Birth"
 COM_XIVEIRM_CONTACTS_ADDRESS_NAME = "Address Name"
-COM_XIVEIRM_CONTACTS_ADDRESS_NAME_ADD = "Addition Address Informations"
+COM_XIVEIRM_CONTACTS_ADDRESS_NAME_ADD = "Additional Address Informations"
 COM_XIVEIRM_CONTACTS_ADDRESS_STREET = "Street"
 COM_XIVEIRM_CONTACTS_ADDRESS_HOUSENO = "House No"
 COM_XIVEIRM_CONTACTS_ADDRESS_ZIP = "ZIP-Code"
@@ -67,23 +67,20 @@ COM_XIVEIRM_TITLE_OPTIONS = "Options"
 COM_XIVEIRM_OPTIONS_ID = "ID"
 COM_XIVEIRM_OPTIONS_USERGROUP = "Usergroup"
 COM_XIVEIRM_OPTIONS_CATEGORY = "Category"
+COM_XIVEIRM_OPTIONS_CATEGORY_FILTER = "- Select Category -"
 COM_XIVEIRM_OPTIONS_OPT_KEY = "Option Key"
 COM_XIVEIRM_OPTIONS_OPT_VALUE = "Option Value"
 COM_XIVEIRM_OPTIONS_OPT_NAME = "Option Name"
 COM_XIVEIRM_OPTIONS_ACCESS = "Access Level"
 COM_XIVEIRM_OPTIONS_ACCESS_FILTER = "- Select Access Level -"
 COM_XIVEIRM_OPTIONS_ORDERING = "Ordering"
-COM_XIVEIRM_TITLE_OPTIONCATEGORIES = "Option Categories"
-COM_XIVEIRM_OPTIONCATEGORIES_ID = "ID"
-COM_XIVEIRM_OPTIONCATEGORIES_APPCAT_KEY = "AppCat Key"
-COM_XIVEIRM_OPTIONCATEGORIES_NAME = "Name"
-COM_XIVEIRM_OPTIONCATEGORIES_STATE = "State"
 COM_XIVEIRM_TITLE_TABAPPS = "TabApps"
 COM_XIVEIRM_TABAPPS_ID = "ID"
 COM_XIVEIRM_TABAPPS_USERGROUP = "Usergroup"
+COM_XIVEIRM_TABAPPS_ACCESS = "Access Level"
 COM_XIVEIRM_TABAPPS_PLUGIN = "Plugin"
-COM_XIVEIRM_TABAPPS_ACCESS_LEVEL = "Access Level"
-COM_XIVEIRM_TABAPPS_CATID = "Category"
+COM_XIVEIRM_TABAPPS_CATEGORY = "Category"
+COM_XIVEIRM_TABAPPS_CATEGORY_FILTER = "- Select Category -"
 COM_XIVEIRM_TABAPPS_CONFIG = "Config (JSON)"
 COM_XIVEIRM_TABAPPS_STATE = "State"
 COM_XIVEIRM_TABAPPS_ORDERING = "Ordering"
@@ -113,8 +110,8 @@ COM_XIVEIRM_FORM_LBL_CONTACT_CHECKED_OUT_TIME = "Checked out at"
 COM_XIVEIRM_FORM_DESC_CONTACT_CHECKED_OUT_TIME = "Checked out at Desc"
 COM_XIVEIRM_FORM_LBL_CONTACT_MODIFIED = "Modified"
 COM_XIVEIRM_FORM_DESC_CONTACT_MODIFIED = "Modified Desc"
-COM_XIVEIRM_FORM_LBL_CONTACT_CATID = "Category"
-COM_XIVEIRM_FORM_DESC_CONTACT_CATID = "Type of the contact (Customer, Patient, POI, Employee, etc...)"
+COM_XIVEIRM_FORM_LBL_CONTACT_CATEGORY = "Category"
+COM_XIVEIRM_FORM_DESC_CONTACT_CATEGORY = "Type of the contact (Customer, Patient, POI, Employee, etc...)"
 COM_XIVEIRM_FORM_LBL_CONTACT_CUSTOMER_ID = "Customer ID"
 COM_XIVEIRM_FORM_DESC_CONTACT_CUSTOMER_ID = "Customer ID Desc"
 COM_XIVEIRM_FORM_LBL_CONTACT_COMPANY = "Company"
@@ -140,7 +137,7 @@ COM_XIVEIRM_FORM_DESC_CONTACT_ADDRESS_HOUSENO = "House No Desc"
 COM_XIVEIRM_FORM_LBL_CONTACT_ADDRESS_ZIP = "ZIP-Code"
 COM_XIVEIRM_FORM_DESC_CONTACT_ADDRESS_ZIP = "ZIP-Code Desc"
 COM_XIVEIRM_FORM_LBL_CONTACT_ADDRESS_CITY = "City"
-COM_XIVEIRM_FORM_DESC_CONTACT_ADDRESS_CITY = "City"
+COM_XIVEIRM_FORM_DESC_CONTACT_ADDRESS_CITY = "City Desc"
 COM_XIVEIRM_FORM_LBL_CONTACT_ADDRESS_REGION = "Region/Province"
 COM_XIVEIRM_FORM_DESC_CONTACT_ADDRESS_REGION = "Region/Province Desc"
 COM_XIVEIRM_FORM_LBL_CONTACT_ADDRESS_COUNTRY = "Country"
@@ -181,28 +178,18 @@ COM_XIVEIRM_FORM_LBL_OPTION_ACCESS = "Access Level"
 COM_XIVEIRM_FORM_DESC_OPTION_ACCESS = "Access Level Desc"
 COM_XIVEIRM_FORM_LBL_OPTION_ORDERING = "Ordering"
 COM_XIVEIRM_FORM_DESC_OPTION_ORDERING = "Ordering Desc"
-COM_XIVEIRM_TITLE_OPTIONCATEGORY = "Option Category"
-COM_XIVEIRM_LEGEND_OPTIONCATEGORY = "Option Category"
-COM_XIVEIRM_FORM_LBL_OPTIONCATEGORY_ID = "ID"
-COM_XIVEIRM_FORM_DESC_OPTIONCATEGORY_ID = "ID Desc"
-COM_XIVEIRM_FORM_LBL_OPTIONCATEGORY_APPCAT_KEY = "AppCat Key"
-COM_XIVEIRM_FORM_DESC_OPTIONCATEGORY_APPCAT_KEY = "Used to call the category with all options related to it. Example: contacts.gender or contacts.titles (100 digits for the tab_key (db plugin element name), 1 digit for explode identifier (.) and 100 digits for the selectlist or radio option id = total amount 201) Note: Edit this section at your own risk!"
-COM_XIVEIRM_FORM_LBL_OPTIONCATEGORY_NAME = "Name"
-COM_XIVEIRM_FORM_DESC_OPTIONCATEGORY_NAME = "Should be strings if we want to translate in other languages. Note: This lists are given and registerede by the system. Edit this section at your own risk!"
-COM_XIVEIRM_FORM_LBL_OPTIONCATEGORY_STATE = "State"
-COM_XIVEIRM_FORM_DESC_OPTIONCATEGORY_STATE = "State Desc"
 COM_XIVEIRM_TITLE_TABAPP = "TabApp"
 COM_XIVEIRM_LEGEND_TABAPP = "TabApp"
 COM_XIVEIRM_FORM_LBL_TABAPP_ID = "ID"
 COM_XIVEIRM_FORM_DESC_TABAPP_ID = "ID Desc"
-COM_XIVEIRM_FORM_LBL_TABAPP_USERGROUP = "Usergroup"
+COM_XIVEIRM_FORM_LBL_TABAPP_USERGROUP = "Client ID"
 COM_XIVEIRM_FORM_DESC_TABAPP_USERGROUP = "Select the usergroup this config is for. Note: The usergroup id could also be the client_id, which means that you have to select the upper group to take effect to all your employees. This is mainly used if the system run as a cloud service and every client have its own usergroup. To determine access, use the access levels (also known as view levels) below."
-COM_XIVEIRM_FORM_LBL_TABAPP_ACCESS_LEVEL = "Access Level"
-COM_XIVEIRM_FORM_DESC_TABAPP_ACCESS_LEVEL = "Access levels or view levels are used to take control over the views. If you want that a certain usergroup do not have access to this tab or widget, you may select a deeper level. Access or vie levels also known as departments - so you ensure that only CEOs have access to the business intelligence TabApp or only the administration and deeper have access to billing informations."
+COM_XIVEIRM_FORM_LBL_TABAPP_ACCESS = "Access Level"
+COM_XIVEIRM_FORM_DESC_TABAPP_ACCESS = "Access levels or view levels are used to take control over the views. If you want that a certain usergroup do not have access to this tab or widget, you may select a deeper level. Access or vie levels also known as departments - so you ensure that only CEOs have access to the business intelligence TabApp or only the administration and deeper have access to billing informations."
 COM_XIVEIRM_FORM_LBL_TABAPP_PLUGIN = "Plugin"
 COM_XIVEIRM_FORM_DESC_TABAPP_PLUGIN = "Select either a TabApp or a Widget for the relationship with the below category"
-COM_XIVEIRM_FORM_LBL_TABAPP_CATID = "Category"
-COM_XIVEIRM_FORM_DESC_TABAPP_CATID = "Select the category to assing a TabApp to. If we are in the client ability mode select Global (All) means all clients have access to it (like the core widget). You could use your own Categories, if you want more detailed categories (such as: customers are patients, companies, enterprise companies, small or middle sized companies, gold customers, etc...). If you have nested categories: select a parent category ensure that all child categories also have access to the tab or widget."
+COM_XIVEIRM_FORM_LBL_TABAPP_CATEGORY = "Category"
+COM_XIVEIRM_FORM_DESC_TABAPP_CATEGORY = "Select the category to assing a TabApp to. If we are in the client ability mode select Global (All) means all clients have access to it (like the core widget). You could use your own Categories, if you want more detailed categories (such as: customers are patients, companies, enterprise companies, small or middle sized companies, gold customers, etc...). If you have nested categories: select a parent category ensure that all child categories also have access to the tab or widget."
 COM_XIVEIRM_FORM_LBL_TABAPP_CONFIG = "Config"
 COM_XIVEIRM_FORM_DESC_TABAPP_CONFIG = "Config stored in json format. At this time i do not know what we save here later :) (may view and accesslvl to prevent user to see apps build for CEOs or CFOs)"
 COM_XIVEIRM_FORM_LBL_TABAPP_STATE = "State"
