fix string errors

--- a/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.sys.ini
+++ b/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.sys.ini
@@ -8,7 +8,7 @@ COM_XIVEIRM = "XiveIRM"
 COM_XIVEIRM_XML_DESCRIPTION = "Interoperable Relationship Management - the next Generation of CRM"
 COM_XIVEIRM_TEST_LABEL = "Test label"
 COM_XIVEIRM_TITLE_CONTACTS = "Contacts"
-COM_XIVEIRM_CONTACTS_CATID = "Contacts - Category"
+COM_XIVEIRM_TITLE_CONTACTS_CATEGORIES = "Contacts - Categories"
 COM_XIVEIRM_TITLE_LIST_VIEW_CONTACTS = "Contacts"
 COM_XIVEIRM_TITLE_LIST_VIEW_CONTACTS_DESC = "Show a list of Contacts"
 COM_XIVEIRM_TITLE_ITEM_VIEW_CONTACT = "Single Contact"
@@ -16,7 +16,7 @@ COM_XIVEIRM_TITLE_ITEM_VIEW_CONTACT_DESC = "Show a specific Contact"
 COM_XIVEIRM_TITLE_FORM_VIEW_CONTACT = "ContactForm"
 COM_XIVEIRM_TITLE_FORM_VIEW_CONTACT_DESC = "Show a form to add or edit a Contact"
 COM_XIVEIRM_TITLE_OPTIONS = "Options"
-COM_XIVEIRM_OPTIONS_CATID = "Options - Category"
+COM_XIVEIRM_TITLE_OPTIONS_CATEGORIES = "Options - Categories"
 COM_XIVEIRM_TITLE_TABAPPS = "TabApps"
 COM_XIVEIRM_TITLE_LIST_VIEW_APIS = "Apis"
 COM_XIVEIRM_TITLE_LIST_VIEW_APIS_DESC = "Show a list of Apis"
