fixed misspelled strings

--- a/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.ini
+++ b/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.ini
@@ -42,6 +42,7 @@ COM_XIVEIRM_CONTACTS_CHECKED_OUT_TIME = "Checked out at"
 COM_XIVEIRM_CONTACTS_MODIFIED = "Modified"
 COM_XIVEIRM_CONTACTS_CATEGORY = "Category"
 COM_XIVEIRM_CONTACTS_CATEGORY_FILTER = "- Select Category -"
+COM_XIVEIRM_CONTACTS_CATEGORIES = "Contacts - Categories"
 COM_XIVEIRM_CONTACTS_CUSTOMER_ID = "Customer ID"
 COM_XIVEIRM_CONTACTS_COMPANY = "Company"
 COM_XIVEIRM_CONTACTS_TITLE = "Title"
@@ -68,6 +69,7 @@ COM_XIVEIRM_OPTIONS_ID = "ID"
 COM_XIVEIRM_OPTIONS_USERGROUP = "Usergroup"
 COM_XIVEIRM_OPTIONS_CATEGORY = "Category"
 COM_XIVEIRM_OPTIONS_CATEGORY_FILTER = "- Select Category -"
+COM_XIVEIRM_OPTIONS_CATEGORIES = "Options - Categories"
 COM_XIVEIRM_OPTIONS_OPT_KEY = "Option Key"
 COM_XIVEIRM_OPTIONS_OPT_VALUE = "Option Value"
 COM_XIVEIRM_OPTIONS_OPT_NAME = "Option Name"
