update client profile and system plugin to work with viewlevels

--- a/source/package/plugins/plg_user_xiveirmclientprofile/language/en-GB/en-GB.plg_user_xiveirmclientprofile.ini
+++ b/source/package/plugins/plg_user_xiveirmclientprofile/language/en-GB/en-GB.plg_user_xiveirmclientprofile.ini
@@ -14,8 +14,8 @@ PLG_USER_XIVEIRMCLIENTPROFILE_FIELD_NAME_REGISTER_REQUIRE_USER = "User profile f
 
 PLG_USER_XIVEIRMCLIENTPROFILE_FIELD_GROUPID_LBL = "Usergroup"
 PLG_USER_XIVEIRMCLIENTPROFILE_FIELD_GROUPID_DESC = "Please choose the clients root usergroup (In select lists, the name of the company). Note: The usergroup id is stored in every main item as an identifier, such as contact items. This option is absolutely necessary to work with clients. Go to the plugin settings to set wether or not, this field is required."
-PLG_USER_XIVEIRMCLIENTPROFILE_FIELD_CATID_LBL = "Category"
-PLG_USER_XIVEIRMCLIENTPROFILE_FIELD_CATID_DESC = "Please choocse the clients root category (In select lists, the name of the company). Note: The category id is stored in every main item as an identifier, such as contact items. This option is absolutely necessary to work with tab apps. Go to the plugin settings to set wether or not, this field is required."
+PLG_USER_XIVEIRMCLIENTPROFILE_FIELD_ACCESS_LBL = "Access Level"
+PLG_USER_XIVEIRMCLIENTPROFILE_FIELD_ACCESS_DESC = "Please choocse the Access Level (In select lists, the name of the company). Note: The access level is bound to the user group. This option is absolutely necessary to work with tab apps. Go to the plugin settings to set wether or not, this field is required."
 PLG_USER_XIVEIRMCLIENTPROFILE_FIELD_JOBTITLE_LBL = "Job Title:"
 PLG_USER_XIVEIRMCLIENTPROFILE_FIELD_JOBTITLE_DESC = "Type in the the users job title. This is used for example in the office app or as general improvement for conversations. Go to the plugin settings to set wether or not, this field is required."
 
