added additional fields button/function to show more informations

--- a/source/package/components/com_xiveirm/site/language/en-GB.com_xiveirm.ini
+++ b/source/package/components/com_xiveirm/site/language/en-GB.com_xiveirm.ini
@@ -59,8 +59,9 @@ COM_XIVEIRM_CONTACT_FORM_CHECKED_OUT_ALERT_ERROR_BODY = "What happened?<ul><li>A
 COM_XIVEIRM_CONTACT_FORM_ACCESS_ID = "Access ID"
 COM_XIVEIRM_CONTACT_FORM_CUSTOMER_ID_LABEL = "Customer ID"
 COM_XIVEIRM_CONTACT_FORM_CUSTOMER_ID = "Enter the Customer ID"
+COM_XIVEIRM_CONTACT_FORM_COMPANY_LABEL = "Company Name"
+COM_XIVEIRM_CONTACT_FORM_COMPANY = "Company"
 COM_XIVEIRM_CONTACT_FORM_NAME_LABEL = "Name"
-COM_XIVEIRM_CONTACT_FORM_COMPANY_NAME = "Company Name"
 COM_XIVEIRM_CONTACT_FORM_NAME_TITLE = "Academic title"
 COM_XIVEIRM_CONTACT_FORM_LAST_NAME = "Last Name"
 COM_XIVEIRM_CONTACT_FORM_FIRST_NAME = "First Name"
