added missing strings, change gender desc

--- a/source/package/components/com_xiveirm/site/language/en-GB.com_xiveirm.ini
+++ b/source/package/components/com_xiveirm/site/language/en-GB.com_xiveirm.ini
@@ -25,7 +25,8 @@ COM_XIVEIRM_NO_ITEMS = "There are no items in the list"
 COM_XIVEIRM_TITLE_FORM_VIEW_XXX_UPPER_INTERNAL_NAME_XXX_DESC = "Show a form to add or edit a item"
 COM_XIVEIRM_TITLE_ITEM_VIEW_XXX_UPPER_INTERNAL_NAME_XXX_DESC = "Show an item"
 COM_XIVEIRM_TITLE_LIST_VIEW_XXX_UPPER_INTERNAL_NAME_XXX_DESC = "List all the items"
-COM_XIVEIRM_SELECT = "- Please Select -"
+COM_XIVEIRM_SELECT = "- Please select -"
+COM_XIVEIRM_SELECT_CATEGORY = "- Please select a category -"
 COM_XIVEIRM_PREVENT_LEAVE_SITE = "Note: All your changes will be lost to this customer. Are you sure you want to leave this page?"
 COM_XIVEIRM_PREVENT_FORM_SUBMISSION = "Another form on this page has been changed. Are you sure you want to continue with this form submission?"
 
@@ -70,7 +71,7 @@ COM_XIVEIRM_CONTACT_FORM_TRAIT_GENDER_UNKNOWN = "Unknown"
 COM_XIVEIRM_CONTACT_FORM_TRAIT_GENDER_FEMALE = "Female"
 COM_XIVEIRM_CONTACT_FORM_TRAIT_GENDER_MALE = "Male"
 COM_XIVEIRM_CONTACT_FORM_TRAIT_GENDER_COMPANY = "Company"
-COM_XIVEIRM_CONTACT_FORM_TRAIT_GENDER_DESC = "Gender takes affect in all other apps"
+COM_XIVEIRM_CONTACT_FORM_TRAIT_GENDER_DESC = "Please note: Based on selected gender, this will produce also a corresponding salutation in docs and eMails."
 COM_XIVEIRM_CONTACT_FORM_TRAIT_DOB = "Date of Birth"
 COM_XIVEIRM_CONTACT_FORM_TRAIT_DOB_DESC = "Autodetects format from browser"
 COM_XIVEIRM_CONTACT_FORM_ADDRESS_LABEL = "Address"
