added strings for select lists

--- a/source/package/components/com_xiveirm/site/language/en-GB.com_xiveirm.ini
+++ b/source/package/components/com_xiveirm/site/language/en-GB.com_xiveirm.ini
@@ -27,6 +27,9 @@ COM_XIVEIRM_TITLE_ITEM_VIEW_XXX_UPPER_INTERNAL_NAME_XXX_DESC = "Show an item"
 COM_XIVEIRM_TITLE_LIST_VIEW_XXX_UPPER_INTERNAL_NAME_XXX_DESC = "List all the items"
 COM_XIVEIRM_SELECT = "- Please select -"
 COM_XIVEIRM_SELECT_CATEGORY = "- Please select a category -"
+COM_XIVEIRM_SELECT_GLOBAL = "System (Global)"
+COM_XIVEIRM_SELECT_CATEGORY_SPECIFIC = "%s specific Categories"
+COM_XIVEIRM_SELECT_TRAITS_SPECIFIC = "%s specific Traits"
 COM_XIVEIRM_PREVENT_LEAVE_SITE = "Note: All your changes will be lost to this customer. Are you sure you want to leave this page?"
 COM_XIVEIRM_PREVENT_FORM_SUBMISSION = "Another form on this page has been changed. Are you sure you want to continue with this form submission?"
 
