--- a/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.ini
+++ b/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.ini
@@ -84,10 +84,10 @@ COM_XIVEIRM_OPTIONS_ORDERING = "Ordering"
 COM_XIVEIRM_TITLE_TABAPPS = "TabApps"
 COM_XIVEIRM_TABAPPS_ID = "ID"
 COM_XIVEIRM_TABAPPS_USERGROUP = "Usergroup"
-COM_XIVEIRM_TABAPPS_ACCESS = "Access Level"
+COM_XIVEIRM_TABAPPS_ACCESS = "Viewing Access Level"
 COM_XIVEIRM_TABAPPS_PLUGIN = "Plugin"
-COM_XIVEIRM_TABAPPS_CATEGORY = "Category"
-COM_XIVEIRM_TABAPPS_CATEGORY_FILTER = "- Select Category -"
+COM_XIVEIRM_TABAPPS_CATEGORY = "Main Category"
+COM_XIVEIRM_TABAPPS_CATEGORY_FILTER = "- Select Main Category -"
 COM_XIVEIRM_TABAPPS_CONFIG = "Config (JSON)"
 COM_XIVEIRM_TABAPPS_STATE = "State"
 COM_XIVEIRM_TABAPPS_ORDERING = "Ordering"
@@ -195,8 +195,8 @@ COM_XIVEIRM_FORM_LBL_TABAPP_ACCESS = "Access Level"
 COM_XIVEIRM_FORM_DESC_TABAPP_ACCESS = "Access levels or view levels are used to take control over the views. If you want that a certain usergroup do not have access to this tab or widget, you may select a deeper level. Access or vie levels also known as departments - so you ensure that only CEOs have access to the business intelligence TabApp or only the administration and deeper have access to billing informations."
 COM_XIVEIRM_FORM_LBL_TABAPP_PLUGIN = "Plugin"
 COM_XIVEIRM_FORM_DESC_TABAPP_PLUGIN = "Select either a TabApp or a Widget for the relationship with the below category"
-COM_XIVEIRM_FORM_LBL_TABAPP_CATEGORY = "Category"
-COM_XIVEIRM_FORM_DESC_TABAPP_CATEGORY = "Select the category to assing a TabApp to. If we are in the client ability mode select Global (All) means all clients have access to it (like the core widget). You could use your own Categories, if you want more detailed categories (such as: customers are patients, companies, enterprise companies, small or middle sized companies, gold customers, etc...). If you have nested categories: select a parent category ensure that all child categories also have access to the tab or widget."
+COM_XIVEIRM_FORM_LBL_TABAPP_CATEGORY = "Main Category"
+COM_XIVEIRM_FORM_DESC_TABAPP_CATEGORY = "Select the main category to assign a TabApp to. If we are in the client ability mode select Global (All) means all clients have access to it (like the core widget). You could use your own Categories, if you want more detailed categories (such as: customers are patients, companies, enterprise companies, small or middle sized companies, gold customers, etc...). If you have nested categories: select a parent category ensure that all child categories also have access to the tab or widget."
 COM_XIVEIRM_FORM_LBL_TABAPP_CONFIG = "Config"
 COM_XIVEIRM_FORM_DESC_TABAPP_CONFIG = "Config stored in json format. At this time i do not know what we save here later :) (may view and accesslvl to prevent user to see apps build for CEOs or CFOs)"
 COM_XIVEIRM_FORM_LBL_TABAPP_STATE = "State"
