removed access from tabapps config, added new ACL lvl instead

--- a/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.ini
+++ b/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.ini
@@ -10,6 +10,8 @@ COM_XIVEIRM_CONFIGURATION = "Xiveirm Configuration"
 COM_XIVEIRM_ACCESS_HEADING = "Access"
 COM_XIVEIRM_COMPONENT_DESC = "Interoperable Relationship Management - the next Generation of CRM"
 COM_XIVEIRM_COMPONENT_LABEL = "XiveIRM"
+JACTION_VIEW = "View"
+JACTION_VIEW_COMPONENT_DESC = "This is a special feature to handle the view for the TabApps. It works independently from the viewing access levels. Control which subgroup has view access to this tab! It is used for the client ability!"
 COM_XIVEIRM_N_ITEMS_ARCHIVED = "%d items successfully archived"
 COM_XIVEIRM_N_ITEMS_ARCHIVED_1 = "%d item successfully archived"
 COM_XIVEIRM_N_ITEMS_CHECKED_IN_0 = "No item successfully checked in"
@@ -84,7 +86,6 @@ COM_XIVEIRM_OPTIONS_ORDERING = "Ordering"
 COM_XIVEIRM_TITLE_TABAPPS = "TabApps"
 COM_XIVEIRM_TABAPPS_ID = "ID"
 COM_XIVEIRM_TABAPPS_USERGROUP = "Usergroup"
-COM_XIVEIRM_TABAPPS_ACCESS = "Viewing Access Level"
 COM_XIVEIRM_TABAPPS_PLUGIN = "Plugin"
 COM_XIVEIRM_TABAPPS_CATEGORY = "Main Category"
 COM_XIVEIRM_TABAPPS_CATEGORY_FILTER = "- Select Main Category -"
@@ -191,10 +192,9 @@ COM_XIVEIRM_FORM_LBL_TABAPP_ID = "ID"
 COM_XIVEIRM_FORM_DESC_TABAPP_ID = "ID Desc"
 COM_XIVEIRM_FORM_LBL_TABAPP_USERGROUP = "Client ID"
 COM_XIVEIRM_FORM_DESC_TABAPP_USERGROUP = "Select the usergroup this config is for. Note: The usergroup id could also be the client_id, which means that you have to select the upper group to take effect to all your employees. This is mainly used if the system run as a cloud service and every client have its own usergroup. To determine access, use the access levels (also known as view levels) below."
-COM_XIVEIRM_FORM_LBL_TABAPP_ACCESS = "Access Level"
-COM_XIVEIRM_FORM_DESC_TABAPP_ACCESS = "Access levels or view levels are used to take control over the views. If you want that a certain usergroup do not have access to this tab or widget, you may select a deeper level. Access or vie levels also known as departments - so you ensure that only CEOs have access to the business intelligence TabApp or only the administration and deeper have access to billing informations."
 COM_XIVEIRM_FORM_LBL_TABAPP_PLUGIN = "Plugin"
 COM_XIVEIRM_FORM_DESC_TABAPP_PLUGIN = "Select either a TabApp or a Widget for the relationship with the below category"
+COM_XIVEIRM_FORM_OPTION_TABAPP_CATEGORY = "Global (All Categories)"
 COM_XIVEIRM_FORM_LBL_TABAPP_CATEGORY = "Main Category"
 COM_XIVEIRM_FORM_DESC_TABAPP_CATEGORY = "Select the main category to assign a TabApp to. If we are in the client ability mode select Global (All) means all clients have access to it (like the core widget). You could use your own Categories, if you want more detailed categories (such as: customers are patients, companies, enterprise companies, small or middle sized companies, gold customers, etc...). If you have nested categories: select a parent category ensure that all child categories also have access to the tab or widget."
 COM_XIVEIRM_FORM_LBL_TABAPP_CONFIG = "Config"
