renamed module templates

--- a/source/package/modules/mod_xiveirm_alertbox_mytasks/language/en-GB/en-GB.mod_xiveirm_alertbox_mytasks.ini
+++ b/source/package/modules/mod_xiveirm_alertbox_mytasks/language/en-GB/en-GB.mod_xiveirm_alertbox_mytasks.ini
@@ -4,13 +4,5 @@
 ; @assetsLicense	devXive Proprietary Use License (http://www.devxive.com/license)
 ; @note		All ini files need to be saved as UTF-8 - No BOM
 
-MOD_XAPPTHEME_SIDEBARSHORTCUTS = "Custom Shortcuts for xAppTheme Sidebar"
-MOD_XAPPTHEME_SIDEBARSHORTCUTS_XML_DESCRIPTION = "Set custom shortcut icons used in the sidebar of the xAppTheme build for heavy use with Bootstrap. Publish it on the <b>sidebar-shortcuts</b> module position"
-MOD_XAPPTHEME_SIDEBARSHORTCUTS_ICON_ICON_LABEL = "Icon"
-MOD_XAPPTHEME_SIDEBARSHORTCUTS_ICON_ICON_DESC = "Type in the class name of the icon as seen in font-awesome. eg: icon-ticket"
-MOD_XAPPTHEME_SIDEBARSHORTCUTS_ICON_COLOR_LABEL = "Color"
-MOD_XAPPTHEME_SIDEBARSHORTCUTS_ICON_COLOR_DESC = "Use the bootstrap button color class names. eg: btn-primary"
-MOD_XAPPTHEME_SIDEBARSHORTCUTS_ICON_TITLE_LABEL = "Title"
-MOD_XAPPTHEME_SIDEBARSHORTCUTS_ICON_TITLE_DESC = "Descript in short what the user is going to do if he clicks here. Used the tooltips from bootstrap"
-MOD_XAPPTHEME_SIDEBARSHORTCUTS_ICON_LINK_LABEL = "Link"
-MOD_XAPPTHEME_SIDEBARSHORTCUTS_ICON_LINK_DESC = "The url where to go if we click on this button"
+MOD_XIVEIRM_ALERTBOX_MYTASKS = "XiveIRM AlertBox MyTasks for XAppTheme"
+MOD_XIVEIRM_ALERTBOX_MYTASKS_XML_DESC = "Shows global flagged items and own tasks"
