--- a/source/package/modules/mod_xiveirm_alertbox_mytasks/language/en-GB/en-GB.mod_xiveirm_alertbox_mytasks.sys.ini
+++ b/source/package/modules/mod_xiveirm_alertbox_mytasks/language/en-GB/en-GB.mod_xiveirm_alertbox_mytasks.sys.ini
@@ -4,5 +4,5 @@
 ; @assetsLicense	devXive Proprietary Use License (http://www.devxive.com/license)
 ; @note		All ini files need to be saved as UTF-8 - No BOM
 
-MOD_XAPPTHEME_SIDEBARSHORTCUTS = "Custom Shortcuts for xAppTheme Sidebar"
-MOD_XAPPTHEME_SIDEBARSHORTCUTS_XML_DESCRIPTION = "Set custom shortcut icons used in the sidebar of the xAppTheme"
+MOD_XIVEIRM_ALERTBOX_MYTASKS = "XiveIRM AlertBox MyTasks for XAppTheme"
+MOD_XIVEIRM_ALERTBOX_MYTASKS_XML_DESC = "Shows global flagged items and own tasks"
