added responsive content

--- a/source/package/components/com_xiveirm/site/language/en-GB.com_xiveirm.ini
+++ b/source/package/components/com_xiveirm/site/language/en-GB.com_xiveirm.ini
@@ -27,6 +27,7 @@ COM_XIVEIRM_TITLE_ITEM_VIEW_XXX_UPPER_INTERNAL_NAME_XXX_DESC = "Show an item"
 COM_XIVEIRM_TITLE_LIST_VIEW_XXX_UPPER_INTERNAL_NAME_XXX_DESC = "List all the items"
 COM_XIVEIRM_SELECT = "- Please select -"
 COM_XIVEIRM_SELECT_CATEGORY = "- Please select a category -"
+COM_XIVEIRM_SELECT_NEW_CONTACT = "- Add a new -"
 COM_XIVEIRM_SELECT_GLOBAL = "System (Global)"
 COM_XIVEIRM_SELECT_CATEGORY_SPECIFIC = "%s specific Categories"
 COM_XIVEIRM_SELECT_PARENT = "Select a root contact"
@@ -34,6 +35,23 @@ COM_XIVEIRM_SELECT_NO_PARENT = "No defined root contact"
 COM_XIVEIRM_SELECT_TRAITS_SPECIFIC = "%s specific Traits"
 COM_XIVEIRM_PREVENT_LEAVE_SITE = "Note: All your changes will be lost to this customer. Are you sure you want to leave this page?"
 COM_XIVEIRM_PREVENT_FORM_SUBMISSION = "Another form on this page has been changed. Are you sure you want to continue with this form submission?"
+
+
+; IRMContacsList Responsive Content
+COM_XIVEIRM_DES_CONTACT_LIST_CONTACTS_ALL = "List of all Contacts in Database"
+COM_XIVEIRM_TAB_CONTACT_LIST_CONTACTS_ALL = "List of all Contacts"
+COM_XIVEIRM_PHO_CONTACT_LIST_CONTACTS_ALL = "All Contacts"
+COM_XIVEIRM_DES_CONTACT_LIST_CONTACTS_STARTS = "List of Contacts that last name starts with:"
+COM_XIVEIRM_TAB_CONTACT_LIST_CONTACTS_STARTS = "List of Contacts starts with:"
+COM_XIVEIRM_PHO_CONTACT_LIST_CONTACTS_STARTS = "Contacts starts with:"
+COM_XIVEIRM_DES_CONTACT_LIST_CONTACTS_LIKE = "List of all Contacts named like:"
+COM_XIVEIRM_TAB_CONTACT_LIST_CONTACTS_LIKE = "All Contacts named like:"
+COM_XIVEIRM_PHO_CONTACT_LIST_CONTACTS_LIKE = "Contacts like:"
+
+; XiveIRM Flags
+COM_XIVEIRM_CONTACT_LIST_FLAGGED = "Flag set for: "
+COM_XIVEIRM_CONTACT_LIST_UNFLAGGED = "Flag removed for: "
+
 
 ; IRMContactGlobalForm ----------------------------------------
 COM_XIVEIRM_CONTACT_FORM_ADD_NEW_CONTACT = "Add a new contact"
@@ -72,6 +90,7 @@ COM_XIVEIRM_CONTACT_FORM_NAME_TITLE = "Academic title"
 COM_XIVEIRM_CONTACT_FORM_LAST_NAME = "Last Name"
 COM_XIVEIRM_CONTACT_FORM_FIRST_NAME = "First Name"
 COM_XIVEIRM_CONTACT_FORM_TRAIT_LABEL = "Traits"
+COM_XIVEIRM_CONTACT_FORM_TRAIT_GENDER_SELECT = "Please select a gender"
 COM_XIVEIRM_CONTACT_FORM_TRAIT_GENDER_UNKNOWN = "Unknown"
 COM_XIVEIRM_CONTACT_FORM_TRAIT_GENDER_FEMALE = "Female"
 COM_XIVEIRM_CONTACT_FORM_TRAIT_GENDER_MALE = "Male"
