changed error messaged to fit new structure of nawala NHtmlJavascript:: ... checkoud messages

--- a/source/package/components/com_xiveirm/site/language/en-GB.com_xiveirm.ini
+++ b/source/package/components/com_xiveirm/site/language/en-GB.com_xiveirm.ini
@@ -78,8 +78,11 @@ COM_XIVEIRM_CONTACT_FORM_RESET_TIP = "Reset form to the default values"
 COM_XIVEIRM_CONTACT_FORM_LAST_MODIFIED = "Last modified on:"
 COM_XIVEIRM_CONTACT_FORM_CHECKED_OUT_INFO_TITLE = "Check-out: Successfully"
 COM_XIVEIRM_CONTACT_FORM_CHECKED_OUT_INFO_BODY = "Other user see can now see that you are currently editing %s. Don\'t forget to click \"SAVE\" or \"CANCEL\" to check in again - editing would otherwise not be possible by other users!"
-COM_XIVEIRM_CONTACT_FORM_CHECKED_OUT_ALERT_ERROR_TITLE = "Please note, this customer has been checked out by another user!"
-COM_XIVEIRM_CONTACT_FORM_CHECKED_OUT_ALERT_ERROR_BODY = "What happened?<ul><li>Another user has already startet to work on this customer.</li></ul></p><p>What can i do?<ul><li>You can work as usual with this customer, but you can currently not change the master data!</li><li>Contact the corresponding user to get more information about the processing (see below) or try again later.</li></ul>TIP: If a contact is checked out, you'll see a red lock icon <i class=\"icon-lock red\"></i> in the list of customers!</p><p>SYSLOG: The user <a href="%s">%s</a> has checked out this contact on %s. An expected processing is possible in about ~%s minutes."
+COM_XIVEIRM_CONTACT_FORM_CHECKED_OUT_BY_OTHER_ALERT_ERROR_TITLE = "Please note, this customer has been checked out by another user!"
+COM_XIVEIRM_CONTACT_FORM_CHECKED_OUT_BY_OTHER_ALERT_ERROR_BODY = "What happened?<ul><li>Another user has already startet to work.</li></ul></p><p>What can i do?<ul><li>You can work as usual, but you can currently not edit this Item!</li><li>Contact the corresponding user to get more information about the processing (see below) or try again later.</li></ul>TIP: If a contact is checked out, you'll see a red lock icon <i class=\"icon-lock red\"></i> in the list!</p><p>SYSLOG: The user %s has checked out this contact on %s."
+COM_XIVEIRM_CONTACT_FORM_CHECKED_OUT_BY_USER_ALERT_ERROR_TITLE = "May you're in a former check out process!"
+COM_XIVEIRM_CONTACT_FORM_CHECKED_OUT_BY_USER_ALERT_ERROR_BODY = "What happened?<ul><li>Despite various warnings you left this item.</li><li>You're kicked due to a session timeout.</li><li>Blackout in an electricity plant.</li></ul></p><p>What can i do?<ul><li>Continue your work and save to check in.</li><li>To check in, simply click cancel.</li></ul><p>SYSLOG: You have started to work with this item on %s."
+COM_XIVEIRM_CONTACT_FORM_CHECKED_OUT_BY_OTHER_ALERT_ERROR_CHECKIN_MESSAGE = "An expected processing is possible in about ~%s minutes."
 COM_XIVEIRM_CONTACT_FORM_ACCESS_ID = "Access ID"
 COM_XIVEIRM_CONTACT_FORM_CUSTOMER_ID_LABEL = "Customer ID"
 COM_XIVEIRM_CONTACT_FORM_CUSTOMER_ID = "Enter the Customer ID"
